yn520-money前端项目：项目整理，开源第一版

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /money-scripts/income_statements
 /money-scripts/cash_statement
 /money-scripts/balance_sheet
+/money-frontend/pics
+money-frontend/node_modules
